# sci-bot-mcp

./: Dockerfile  README.md  __init__.py  mcp.json  pyproject.toml  requirements.txt  server.py  server_http.py  server_stdio.py  smithery.yaml
sci_bot_mcp/: __init__.py  server.py  server_stdio.py
