[project]
name = "sci-bot-mcp"
version = "0.1.0"
description = "AI-powered research assistant MCP server. Search 200M+ academic papers and get answers with real citations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
sci-bot-mcp = "server_stdio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
