[project]
name = "sci-bot-mcp"
version = "0.1.0"
description = "AI-powered research assistant MCP server with 200M+ academic papers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "lnkvv210-eng"}]
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.28.0",
    "starlette>=0.27.0",
]

[project.scripts]
sci-bot-mcp = "server_stdio:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server_stdio", "server"]
